Make sure OK button is always visible at bottom of dialogs

--- a/Presentation/Nop.Web/Content/Custom/cyo/cyo.css
+++ b/Presentation/Nop.Web/Content/Custom/cyo/cyo.css
@@ -20,7 +20,7 @@
   height: auto;
   width: auto;
   width: auto;
-  height: auto;
+  height: auto;mo
   overflow: hidden;
   position: absolute;
   padding: 20px;
@@ -130,10 +130,6 @@
 
 #cyoModalText input[type=text] {
     width: 200px;
-}
-
-.modal-close-button {
-    margin-top: 20px;
 }
 
 .cyo-h2 {
